# business-validation-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-engine/: Dockerfile  README.md  pyproject.toml
ai-engine/src/validity_crew/: api.py  crew.py  database.py  main.py  models.py
backend/: Dockerfile  manage.py  requirements.txt
backend/ideas/: admin.py  agent_client.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/project/: celery.py  settings.py  urls.py
docs/: development.md
