[project]
name = "validity_crew"
version = "0.1.0"
description = "validity_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0"
]

[project.scripts]
validity_crew = "validity_crew.main:run"
run_crew = "validity_crew.main:run"
serve_crew = "validity_crew.main:serve"
train = "validity_crew.main:train"
replay = "validity_crew.main:replay"
test = "validity_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"